# paper-shelf

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
paper_shelf/: arxiv_client.py  critique.py  daily_feed.py  discovery.py  library.py  main.py  pdf_extractor.py  reader_claude.py  reader_codex.py  storage.py
paper_shelf/server/: app.py  routes_critique.py  routes_discovery.py  routes_feed.py  routes_papers.py  routes_shelves.py  routes_upload.py  tasks.py
prompts/: critique_prompt.txt  critique_schema.json  reading_prompt.txt  schema.json
src/: arxiv_client.py  critique.py  daily_feed.py  discovery.py  exceptions.py  library.py  main.py  pdf_extractor.py  reader_claude.py  reader_codex.py  storage.py  translate.py
src/server/: app.py  routes_critique.py  routes_discovery.py  routes_feed.py  routes_papers.py  routes_shelves.py  routes_upload.py  tasks.py
tests/: test_library.py  test_main.py  test_pdf_extractor.py  test_reader_claude.py  test_reader_codex.py  test_server.py  test_storage.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/api/: client.ts
web/src/components/: CritiqueChat.tsx  CritiqueSection.tsx  DailyFeed.tsx  DiscoveryResults.tsx  Layout.tsx  PaperCard.tsx  PaperTable.tsx  ReaderComparison.tsx  ReadingProgress.tsx  ReadingSection.tsx  ShelfSidebar.tsx  TagBadge.tsx  UploadDropzone.tsx
web/src/pages/: LibraryPage.tsx  PaperDetailPage.tsx  UploadPage.tsx
web/src/styles/: globals.css
web/src/types/: paper.ts
